--- a/src/app/components/pages/header/header.component.html
+++ b/src/app/components/pages/header/header.component.html
@@ -1,1 +1,13 @@
-<p>header works!</p>
+<header>
+    <img src="assets/title.png">
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="d-inline p-2">Je parle <b>Français</b>&nbsp;&nbsp;&nbsp;<br />&nbsp;&nbsp;</div>
+          <div class="d-inline p-2">
+            Je fonctionne <br />sur <b>Chrome</b>
+          
+          </div>
+          <div class="d-inline p-2 link"><a href="mailto:smartysupport@axa.com">En cas de problème,<br /> contacter le support <b>ici</b></a></div>
+        </div>
+      </div>
+  </header>
