--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -25,20 +25,27 @@
      right: 45px;
      z-index: 9;
  }
+ .chat_refresh_icon {
+    cursor:pointer;
+     color: #fff;
+     font-size:16px;
+     position: absolute;
+     right: 75px;
+     z-index: 9;
+ }
 .chat_on_icon{
     color:#fff;
     font-size:40px;
     text-align:center;
 }
-
-@media only screen and (max-width:765px){
+@media only screen and (max-width:480px) {
     .chat_on {
         position: fixed;
         z-index: 10;
-        width: 80px;
-        height: 80px;
-        right: 30px;
-        bottom:120px;
+        width: 58px;
+        height: 58px;
+        right: 9%;
+        bottom:28%;
         background-color: #1e6468;
         color: #fff;
         border-radius: 50%;
@@ -48,16 +55,18 @@
         cursor: pointer;
         display: block;
     }
+    .chat_on_icon>img{max-width: 40px;position: relative;margin-bottom:60px;}
+
 }
 
-@media only screen and (min-width:765px){
+@media only screen and (min-width:1080px){
     .chat_on {
         position: fixed;
         z-index: 10;
         width: 80px;
         height: 80px;
-        right: 80px;
-        bottom:70px;
+        right: 5%;
+        bottom:14%;
         background-color: #1e6468;
         color: #fff;
         border-radius: 50%;
@@ -67,6 +76,30 @@
         cursor: pointer;
         display: block;
     }
+    .chat_on_icon>img{max-width: 58px;margin-bottom: 30px;position: relative;}
+
+}
+
+@media only screen and (min-width:481px) and (max-width:1080px){
+    .chat_on {
+        position: fixed;
+        z-index: 10;
+        width: 80px;
+        height: 80px;
+        right: 10%;
+        bottom:22%;
+        background-color: #1e6468;
+        color: #fff;
+        border-radius: 50%;
+        text-align: center;
+        padding: 9px;
+        box-shadow: 0 2px 4px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12)!important;
+        cursor: pointer;
+        display: block;
+    }
+
+    .chat_on_icon>img{max-width: 58px;margin-bottom: 30px;position: relative;}
+    
 }
 
 .chat_on_icon{
@@ -82,16 +115,18 @@
  -webkit-tap-highlight-color:transparent
 }
 */
-@media only screen and (max-width:765px){
+@media only screen and (max-width:768px) and (min-width:0px){
     #Smallchat .Layout { 
      pointer-events:auto;
      box-sizing:content-box!important;
-     z-index:999999999;
+     /* z-index:999999999; */
+    z-index:2000;
+
      position:fixed;
-     bottom:65px;
+     bottom:0%;
      margin-left: 15px;
-     min-width:50px;
-     max-width:500px;
+     min-width:100%;
+     max-width:100%;
      max-height:30px;
      display:-webkit-box;
      display:-webkit-flex;
@@ -115,12 +150,12 @@
      opacity:0;
      -webkit-transition:right .1s cubic-bezier(.25,.25,.5,1),bottom .1s cubic-bezier(.25,.25,.5,1),min-width .2s cubic-bezier(.25,.25,.5,1),max-width .2s cubic-bezier(.25,.25,.5,1),min-height .2s cubic-bezier(.25,.25,.5,1),max-height .2s cubic-bezier(.25,.25,.5,1),border-radius 50ms cubic-bezier(.25,.25,.5,1) .15s,background-color 50ms cubic-bezier(.25,.25,.5,1) .15s,color 50ms cubic-bezier(.25,.25,.5,1) .15s;
      transition:right .1s cubic-bezier(.25,.25,.5,1),bottom .1s cubic-bezier(.25,.25,.5,1),min-width .2s cubic-bezier(.25,.25,.5,1),max-width .2s cubic-bezier(.25,.25,.5,1),min-height .2s cubic-bezier(.25,.25,.5,1),max-height .2s cubic-bezier(.25,.25,.5,1),border-radius 50ms cubic-bezier(.25,.25,.5,1) .15s,background-color 50ms cubic-bezier(.25,.25,.5,1) .15s,color 50ms cubic-bezier(.25,.25,.5,1) .15s;
-     margin-bottom: 60px;
+     margin-bottom: 0px;
     }
     #Smallchat .Layout-open {
         overflow:hidden;
-        height:650px;
-        max-height:650px;
+        height:90%;
+        max-height:90%;
         border-radius:10px;
         color:#fff;
         -webkit-transition:right .1s cubic-bezier(.25,.25,.5,1),bottom .1s cubic-bezier(.25,.25,.5,1.1),min-width .2s cubic-bezier(.25,.25,.5,1.1),max-width .2s cubic-bezier(.25,.25,.5,1.1),max-height .2s cubic-bezier(.25,.25,.5,1.1),min-height .2s cubic-bezier(.25,.25,.5,1.1),border-radius 0ms cubic-bezier(.25,.25,.5,1.1),background-color 0ms cubic-bezier(.25,.25,.5,1.1),color 0ms cubic-bezier(.25,.25,.5,1.1);
@@ -128,22 +163,83 @@
        }
        
        #Smallchat .Layout-expand {
-        height:650px;
-        min-height:650px;
+        height:90%;
+        min-height:90%;
         display:none;
        }
+       #Smallchat .Layout-right {
+        right:1px;
+       }
 }
-@media only screen and (min-width:765px){
+@media only screen and (min-width:768px){
+    #Smallchat .Layout { 
+     pointer-events:auto;
+     box-sizing:content-box!important;
+     /* z-index:999999999; */
+    z-index:2000;
+
+     position:fixed;
+     bottom:0px;
+     margin-left: 15px;
+     min-width:60%;
+     max-width:60%;
+     max-height:30px;
+     display:-webkit-box;
+     display:-webkit-flex;
+     display:-ms-flexbox;
+     display:flex;
+     -webkit-box-orient:vertical;
+     -webkit-box-direction:normal;
+     -webkit-flex-direction:column;
+     -ms-flex-direction:column;
+     flex-direction:column;
+     -webkit-box-pack:end;
+     -webkit-justify-content:flex-end;
+     -ms-flex-pack:end;
+     justify-content:flex-end;
+     border-radius:50px;
+     box-shadow:5px 0 20px 5px rgba(0,0,0,.1);
+     -webkit-animation:appear .15s cubic-bezier(.25,.25,.5,1.1);
+     animation:appear .15s cubic-bezier(.25,.25,.5,1.1);
+     -webkit-animation-fill-mode:forwards;
+     animation-fill-mode:forwards;
+     opacity:0;
+     -webkit-transition:right .1s cubic-bezier(.25,.25,.5,1),bottom .1s cubic-bezier(.25,.25,.5,1),min-width .2s cubic-bezier(.25,.25,.5,1),max-width .2s cubic-bezier(.25,.25,.5,1),min-height .2s cubic-bezier(.25,.25,.5,1),max-height .2s cubic-bezier(.25,.25,.5,1),border-radius 50ms cubic-bezier(.25,.25,.5,1) .15s,background-color 50ms cubic-bezier(.25,.25,.5,1) .15s,color 50ms cubic-bezier(.25,.25,.5,1) .15s;
+     transition:right .1s cubic-bezier(.25,.25,.5,1),bottom .1s cubic-bezier(.25,.25,.5,1),min-width .2s cubic-bezier(.25,.25,.5,1),max-width .2s cubic-bezier(.25,.25,.5,1),min-height .2s cubic-bezier(.25,.25,.5,1),max-height .2s cubic-bezier(.25,.25,.5,1),border-radius 50ms cubic-bezier(.25,.25,.5,1) .15s,background-color 50ms cubic-bezier(.25,.25,.5,1) .15s,color 50ms cubic-bezier(.25,.25,.5,1) .15s;
+     margin-bottom: 0px;
+    }
+    #Smallchat .Layout-open {
+        overflow:hidden;
+        height:70%;
+        max-height:70%;
+        border-radius:10px;
+        color:#fff;
+        -webkit-transition:right .1s cubic-bezier(.25,.25,.5,1),bottom .1s cubic-bezier(.25,.25,.5,1.1),min-width .2s cubic-bezier(.25,.25,.5,1.1),max-width .2s cubic-bezier(.25,.25,.5,1.1),max-height .2s cubic-bezier(.25,.25,.5,1.1),min-height .2s cubic-bezier(.25,.25,.5,1.1),border-radius 0ms cubic-bezier(.25,.25,.5,1.1),background-color 0ms cubic-bezier(.25,.25,.5,1.1),color 0ms cubic-bezier(.25,.25,.5,1.1);
+        transition:right .1s cubic-bezier(.25,.25,.5,1),bottom .1s cubic-bezier(.25,.25,.5,1.1),min-width .2s cubic-bezier(.25,.25,.5,1.1),max-width .2s cubic-bezier(.25,.25,.5,1.1),max-height .2s cubic-bezier(.25,.25,.5,1.1),min-height .2s cubic-bezier(.25,.25,.5,1.1),border-radius 0ms cubic-bezier(.25,.25,.5,1.1),background-color 0ms cubic-bezier(.25,.25,.5,1.1),color 0ms cubic-bezier(.25,.25,.5,1.1);
+       }
+       
+       #Smallchat .Layout-expand {
+        height:70%;
+        min-height:70%;
+        display:none;
+       }
+       #Smallchat .Layout-right {
+        right:10px
+       }
+}
+@media only screen and (min-width:1080px){
 #Smallchat .Layout { 
  pointer-events:auto;
  box-sizing:content-box!important;
- z-index:999999999;
+ /* z-index:999999999; */
+ z-index:2000;
+
  position:fixed;
  bottom:0px;
  /* margin-right: 50px;
  margin-left: 15px; */
- min-width:500px;
- max-width:500px;
+ min-width:40%;
+ max-width:40%;
  max-height:30px;
  display:-webkit-box;
  display:-webkit-flex;
@@ -167,12 +263,12 @@
  opacity:0;
  -webkit-transition:right .1s cubic-bezier(.25,.25,.5,1),bottom .1s cubic-bezier(.25,.25,.5,1),min-width .2s cubic-bezier(.25,.25,.5,1),max-width .2s cubic-bezier(.25,.25,.5,1),min-height .2s cubic-bezier(.25,.25,.5,1),max-height .2s cubic-bezier(.25,.25,.5,1),border-radius 50ms cubic-bezier(.25,.25,.5,1) .15s,background-color 50ms cubic-bezier(.25,.25,.5,1) .15s,color 50ms cubic-bezier(.25,.25,.5,1) .15s;
  transition:right .1s cubic-bezier(.25,.25,.5,1),bottom .1s cubic-bezier(.25,.25,.5,1),min-width .2s cubic-bezier(.25,.25,.5,1),max-width .2s cubic-bezier(.25,.25,.5,1),min-height .2s cubic-bezier(.25,.25,.5,1),max-height .2s cubic-bezier(.25,.25,.5,1),border-radius 50ms cubic-bezier(.25,.25,.5,1) .15s,background-color 50ms cubic-bezier(.25,.25,.5,1) .15s,color 50ms cubic-bezier(.25,.25,.5,1) .15s;
- margin-bottom: 60px;
+ margin-bottom: 10vmin;
 }
 #Smallchat .Layout-open {
     overflow:hidden;
-    height:650px;
-    max-height:650px;
+    height:70%;
+    max-height:70%;
     border-radius:10px;
     color:#fff;
     -webkit-transition:right .1s cubic-bezier(.25,.25,.5,1),bottom .1s cubic-bezier(.25,.25,.5,1.1),min-width .2s cubic-bezier(.25,.25,.5,1.1),max-width .2s cubic-bezier(.25,.25,.5,1.1),max-height .2s cubic-bezier(.25,.25,.5,1.1),min-height .2s cubic-bezier(.25,.25,.5,1.1),border-radius 0ms cubic-bezier(.25,.25,.5,1.1),background-color 0ms cubic-bezier(.25,.25,.5,1.1),color 0ms cubic-bezier(.25,.25,.5,1.1);
@@ -180,14 +276,15 @@
    }
    
    #Smallchat .Layout-expand {
-    height:650px;
-    min-height:650px;
+    height:70%;
+    min-height:70%;
     display:none;
    }
+   #Smallchat .Layout-right {
+    right:10px
+   }
 }
-#Smallchat .Layout-right {
- right:10px
-}
+
 
 
 #Smallchat .Layout-mobile {
@@ -304,7 +401,7 @@
  }
 }
 #Smallchat .Messenger_content {
-    height: 450px;
+    height: 90%;
     -webkit-box-flex: 1;
     -webkit-flex-grow: 1;
     -ms-flex-positive: 1;
@@ -406,130 +503,4 @@
 #Smallchat .Input-emoji .Input_button-emoji .Icon path, #Smallchat .Input_button:hover .Icon path {
     fill: #2c2c46;
 }
-
-
-        #main-banner {
-            background-color: #1e6468;
-            color: white;
-            left: 0 !important;
-            z-index: 4000 !important;
-            bottom: 0 !important;
-            position: fixed !important;
-            right: 0 !important;
-            padding: 5px !important;
-            padding-bottom: 10px;
-        }
-
-        #inside-banner {
-            margin-left: auto !important;
-            margin-right: auto !important;
-            max-width: 140.8205128rem !important;
-            display: flex;
-            justify-content: center !important;
-            align-items: center !important;
-        }
-        /* Add styles to the form container */
-
-        /*pop up css*/
-
-        h1 {
-            text-align: center;
-            font-family: Tahoma, Arial, sans-serif;
-            color: #06D85F;
-            margin: 80px 0;
-        }
-
-        .box {
-            width: 40%;
-            margin: 0 auto;
-            background: rgba(255,255,255,0.2);
-            padding: 35px;
-            border: 2px solid #fff;
-            border-radius: 20px/50px;
-            background-clip: padding-box;
-            text-align: center;
-        }
-
-        .button {
-            font-size: 1em;
-            padding: 10px;
-            color: #fff;
-            border: 2px solid #06D85F;
-            border-radius: 20px/50px;
-            text-decoration: none;
-            cursor: pointer;
-            transition: all 0.3s ease-out;
-        }
-
-            .button:hover {
-                background: #06D85F;
-            }
-
-        .overlay {
-            position: fixed;
-            top: 0;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            background: rgba(0, 0, 0, 0.7);
-            transition: opacity 500ms;
-            visibility: hidden;
-            opacity: 0;
-            z-index: 2000;
-        }
-
-            .overlay:target {
-                visibility: visible;
-                opacity: 1;
-            }
-
-        .popup {
-            margin: 70px auto;
-            padding: 15px;
-            background: #fff;
-            border-radius: 5px;
-            width: 65%;
-            height: 65%;
-            position: relative;
-            transition: all 5s ease-in-out;
-        }
-
-            .popup h2 {
-                margin-top: 0;
-                color: #333;
-                font-family: Tahoma, Arial, sans-serif;
-            }
-
-            .popup .close {
-                position: absolute;
-                top: -7px;
-                right: 0px;
-                transition: all 200ms;
-                font-size: 30px;
-                font-weight: bold;
-                text-decoration: none;
-                color: #333;
-            }
-
-                .popup .close:hover {
-                    color: #06D85F;
-                }
-
-            .popup .content {
-                height: 100%;
-            }
-
-        @media screen and (max-width: 700px) {
-            .box {
-                width: 70%;
-            }
-
-            .popup {
-                width: 70%;
-            }
-        }
-
-        .doc {
-            width: 100%;
-            height: 500px;
-        }
+/*  */
