--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,9 +1,9 @@
 
-<app-callback *ngIf='token'></app-callback>
+<app-callback *ngIf='!token'></app-callback>
 
-<app-header *ngIf='!token'></app-header>
+<app-header *ngIf='token'></app-header>
 
-<div class="container" *ngIf='!token'>
+<div class="container" *ngIf='token'>
 	<div class="row">
 	 <div id="Smallchat">
     <div class="Layout Layout-open Layout-expand Layout-right" style="background-color: #1e6465;color: rgb(255, 255, 255);opacity: 5;border-radius: 10px;">
@@ -31,6 +31,6 @@
 </div>
 
 
-<app-footer *ngIf='!token'></app-footer>
+<app-footer *ngIf='token'></app-footer>
 
 
