--- a/src/app/components/pages/footer/footer.component.html
+++ b/src/app/components/pages/footer/footer.component.html
@@ -2,19 +2,23 @@
     <!-- <button id="mychat" class="close-button" onclick="openForm()"><img id="clickbutton" src="images/smartyIcon.png" />&nbsp; &nbsp; Smarty</button> -->
 
 
-   <img src="assets/bg-final1.png">
-   <div class="top-btn">
-    Je fonctionne <br />sur <b>Chrome</b> 
-   </div>
-   <div class="left-btn">
-    Je parle <b>Français</b>&nbsp;&nbsp;&nbsp;<br />&nbsp;&nbsp;
-   
-   </div>
-   <div class="right-btn">
-    <a href="mailto:smartysupport@axa.com">
-        En cas de problème,<br /> contacter le support <b>ici</b>
-    </a>
-   </div>
+    <div class="img-container" style="width: 100%;">
+        <img src="assets/bg-final1.png" >
+        <!-- <img src="assets/Smarty.png" class="show-smarty" style="z-index: 2; top:0px"> -->
+        <div class="top-btn fix">
+         Je fonctionne sur &nbsp; <b> Chrome</b>
+        </div>
+        <div class="left-btn fix">
+         Je parle &nbsp; <b> Français</b>
+
+        </div>
+        <div class="right-btn fix">
+         <a href="mailto:smartysupport@axa.com">
+             En cas de problème,<br /> contacter le support: <br />smartysupport@axa.com
+         </a>
+        </div>
+    </div>
+
 
    <div class="container-fluid footer-color" >
       <div class="footer-content">
@@ -36,7 +40,7 @@
 
 
 
-  
+
     <!-- <div class="footer-color container-fluid">
         <div class="footer-container" style="text-align: center;">
             Les questions que vous posez dans le champ libre du chatbot ne doivent pas pouvoir être associées à un individu en particulier, étant entendu que ces informations sont collectées dans le cadre de l’amélioration du chatbot. Veuillez ne divulguer aucune information personnelle lorsque vous renseignez ce champ libre.
@@ -44,15 +48,15 @@
             <a href="#popup">lien suivant</a>.
         </div>
     </div> -->
-    
-    
-  
+
+
+
 </footer>
 
 <div class="modal fade" id="confirmApprove" style="z-index: 9999;">
     <div class="modal-dialog" style="width:auto">
       <div class="modal-content">
-  
+
         <!-- Modal Header -->
         <div class="modal-header">
 
@@ -63,8 +67,8 @@
             <!-- <pdf-viewer [src]="'assets/Chatbot-Privacy-Notice.pdf'"
             [original-size]="false"
             ></pdf-viewer> -->
-            <ngx-extended-pdf-viewer [src]="pdfSrc" 
-            useBrowserLocale="true" 
+            <ngx-extended-pdf-viewer [src]="pdfSrc"
+            useBrowserLocale="true"
             height="80vh"
             width="50vh"
             [textLayer]="true"
@@ -82,11 +86,10 @@
             </ngx-extended-pdf-viewer>
             <!-- <embed src="" width="100%" height="100%" type="application/pdf"> -->
         </div>
-       
+
       </div>
     </div>
   </div>
 
 
 
-  
