--- a/src/app/components/pages/header/header.component.css
+++ b/src/app/components/pages/header/header.component.css
@@ -32,7 +32,7 @@ header >div>div >div.d-inline{
         position: relative;
         min-width:30px;
         min-height:30px;
-        font-size: 80%;
+        font-size:1.1rem;
         cursor: auto;
 }
 
