--- a/src/app/components/pages/header/header.component.html
+++ b/src/app/components/pages/header/header.component.html
@@ -5,9 +5,9 @@
           <div class="d-inline p-2">Je parle <b>Français</b>&nbsp;&nbsp;&nbsp;<br />&nbsp;&nbsp;</div>
           <div class="d-inline p-2">
             Je fonctionne <br />sur <b>Chrome</b>
-          
           </div>
-          <div class="d-inline p-2 link"><a href="mailto:smartysupport@axa.com">En cas de problème,<br /> contacter le support <b>ici</b></a></div>
+          <div class="d-inline p-2 link"><a href="mailto:smartysupport@axa.com">En cas de problème,<br />contacter le support: smartysupport@axa.com</a></div>
         </div>
       </div>
+   
   </header>
