--- a/src/app/components/pages/footer/footer.component.css
+++ b/src/app/components/pages/footer/footer.component.css
@@ -38,22 +38,26 @@
     footer div.left-btn{
        float: left;
        position: fixed;
-       left:12%;
-       top: 67%;
-       bottom: 8%;
+       left:9%;
+       top: 55%;
+       bottom: 18%;
        z-index: 1000;
        background-color: #26349b;
-       border: 2px solid #26349b;
-       min-width:10%;
+       border: 3px solid white;
+       max-width:15%;
+       word-wrap: break-word;
        align-items: center;
        display: flex;
        border-radius: 12px;
-       max-height:70px;
-       font-size: 100%;
+       max-height:80px;
+
        cursor: auto;
        text-align: center;
        text-decoration: none;
-       padding: 15px;
+       padding:12px;
+       font-size:1vmax;
+
+       overflow-wrap: break-word;
        color: #FFFFFF;
     }
 
@@ -62,50 +66,56 @@
     footer div.right-btn {
         float: left;
         position: fixed;
-        left:40%;
-        top: 67%;
-        bottom: 8%;
+        left:42%;
+        top: 55%;
+        bottom: 18%;
         z-index: 1000;
         background-color: #26349b;
-        border: 2px solid #26349b;
-        min-width:10%;
+        border: 3px solid white;
+        max-width:15%;
         border-radius: 12px;
-        max-height:70px;
+        max-height:21%;
         cursor: auto;
+        align-items: center;
+        display: flex;
         text-align: center;
         text-decoration: none;
-        padding: 5px;
+        overflow-wrap: break-word;
+        padding: 11px;
         color: #FFFFFF;
+        font-size:1vmax;
      }
 
      footer div.right-btn  a{
-         color:white;
-         font-size: 100%;
-         text-align: justify;
+       max-width: 100%;
+       color:white;
 
-
+       position: relative;
      }
 
      footer div.top-btn{
         float: left;
         position: fixed;
         left:26%;
-        top: 38%;
-        bottom:58%;
+        top: 30%;
+        bottom:60%;
         z-index: 1000;
         background-color: #26349b;
-        border: 2px solid #26349b;
-        min-width:10%;
+        border: 3px solid white;
+        max-width:15%;
         border-radius: 12px;
         align-items: center;
         display: flex;
-        min-height:70px;
-        font-size: 100%;
+        min-height:80px;
+        /*font-size:1vmax;*/
         cursor: auto;
-        text-align: center;
         text-decoration: none;
-        padding: 15px;
+        padding: 22px;
+        text-align: center;
         color: #FFFFFF;
+        overflow-wrap: break-word;
+        font-size:1vmax;
+
      }
 
      footer div.right-btn:hover{
