--- a/src/app/components/pages/footer/footer.component.html
+++ b/src/app/components/pages/footer/footer.component.html
@@ -3,18 +3,18 @@
 
 
     <div class="img-container" style="width: 100%;">
-        <img src="assets/bg-final1.png" >
+        <img src="assets/bg-final1 (1).png" >
         <!-- <img src="assets/Smarty.png" class="show-smarty" style="z-index: 2; top:0px"> -->
         <div class="top-btn fix">
-         Je fonctionne sur &nbsp; <b> Chrome</b>
+         <p>Je fonctionne sur Chrome  <br/> <i style="font-style: italic; font-weight: lighter;">I run on Chrome</i></p>
         </div>
         <div class="left-btn fix">
-         Je parle &nbsp; <b> Français</b>
+         <p>Je parle français et anglais  <br/> <i style="font-style: italic; font-weight: lighter;">I speak French and English</i></p>
 
         </div>
         <div class="right-btn fix">
-         <a href="mailto:smartysupport@axa.com">
-             En cas de problème,<br /> contacter le support: <br />smartysupport@axa.com
+         <a href="mailto:smartysupport@axa.com" style="text-decoration: none;">
+             En cas de problème, contacter le support &nbsp; <br/> <i style="font-style: italic; font-weight: lighter;">If you have any queries, Please contact support</i> smartysupport@axa.com
          </a>
         </div>
     </div>
