--- a/src/app/components/pages/header/header.component.html
+++ b/src/app/components/pages/header/header.component.html
@@ -1,13 +1,16 @@
 <header>
-    <img src="assets/title.png">
+    <img src="assets/TITREFR-EN-8.png">
       <div class="row">
         <div class="col-sm-12">
-          <div class="d-inline p-2">Je parle <b>Français</b>&nbsp;&nbsp;&nbsp;<br />&nbsp;&nbsp;</div>
+          <div class="d-inline p-2"><p>Je parle français et anglais  <br/> <i style="font-size: small;">I speak French and English</i></p></div>
           <div class="d-inline p-2">
-            Je fonctionne <br />sur <b>Chrome</b>
+            <p>Je fonctionne sur Chrome  <br/> <i style="font-size: small; ">I run on Chrome</i></p>
           </div>
-          <div class="d-inline p-2 link"><a href="mailto:smartysupport@axa.com">En cas de problème,<br />contacter le support: smartysupport@axa.com</a></div>
+          <div class="d-inline p-2 link">
+            <a href="mailto:smartysupport@axa.com" style="text-decoration: none;">
+              <p>En cas de problème, contacter le support <br/> <i>If you have any queries, Please contact support <br/> smartysupport@axa.com</i>
+            </a>
+          </div>
         </div>
       </div>
-   
-  </header>
+</header>
