--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -24,7 +24,7 @@
         </div>
       </div>
     </div>
-    <!--===============CHAT ON BUTTON STRART===============-->
+    <!--===============CHAT ON BUTTON START===============-->
     <div class="chat_on"  (click)="onShow()"> <span class="chat_on_icon"><img src="../../../assets/ic_launcher.png" ></span> </div>
     <!-- <div class="chat_on"  (click)="onShow()"> <span class="chat_on_icon"><i class="fas fa-robot" aria-hidden="true"></i></span> </div> -->
     <!--===============CHAT ON BUTTON END===============-->
