--- a/src/app/components/pages/header/header.component.css
+++ b/src/app/components/pages/header/header.component.css
@@ -23,7 +23,7 @@ header >div>div >div.d-inline{
         margin-left: 3px;
         background-color: #26349b;
         border-radius: 12px;
-        border: 2px solid #26349b;
+        border: 3px solid white;
         color: white;
         padding: 1% 2%;
         text-align: center;
@@ -38,11 +38,11 @@ header >div>div >div.d-inline{
 
 header >div>div >div.d-inline:hover{
     background-color: #1e6465; /* Green */
+
     color: white;
 }
 
 header >div>div >div.d-inline>a{
     color: white;
-    font-size: 80%;
 }
 }
